--- a/practica-10/output.css
+++ b/practica-10/output.css
@@ -1540,6 +1540,9 @@
   .bg-no-repeat {
     background-repeat: no-repeat;
   }
+  .fill-blue-600 {
+    fill: var(--color-blue-600);
+  }
   .stroke-black {
     stroke: var(--color-black);
   }
@@ -1796,6 +1799,9 @@
   }
   .text-blue-800 {
     color: var(--color-blue-800);
+  }
+  .text-gray-200 {
+    color: var(--color-gray-200);
   }
   .text-gray-400 {
     color: var(--color-gray-400);
@@ -3099,6 +3105,11 @@
   .dark\:text-gray-400 {
     &:where(.dark, .dark *) {
       color: var(--color-gray-400);
+    }
+  }
+  .dark\:text-gray-600 {
+    &:where(.dark, .dark *) {
+      color: var(--color-gray-600);
     }
   }
   .dark\:text-gray-900 {
